<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a_name">Team A</string>
    <string name="score_a_text_label">0</string>
    <string name="_3_points">+3 points</string>
    <string name="_2_points">+2 points</string>
    <string name="free_throws">Free Throw</string>
    <string name="score_b_text_label">0</string>
    <string name="team_b_name">Team B</string>
    <string name="reset_button_label">reset</string>
</resources>
